Streaming/kubernetes/gateway/gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-deployment
  labels:
    app: gateway-lbl
spec:
  replicas: 2
  selector:
    matchLabels:
      app: gateway-lbl
  template:
    metadata:
      labels:
        app: gateway-lbl
    spec:
      containers:
        - name: gateway
          image: dergunnik/streaming-gateway:latest
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /health/live
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /health/ready
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
spec:
  selector:
    app: gateway-lbl
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
